--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,29 +165,20 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization img, 
+.online-reputation-management img,
+.social-media-marketing img
+ 
+{
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
+/*Grouped css classes together in one*/
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2
+{
     margin-bottom: 20px;
     font-size: 36px;
 }
