--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,55 +90,37 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead,
+.benefit-brand,
+.benefit-cost
+{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3
+{
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img,
+.benefit-brand img,
+.benefit-cost img
+{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/*Grouped css classes together in one*/
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing
+{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -147,24 +129,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+/*Grouped css classes together in one*/
 .search-engine-optimization img, 
 .online-reputation-management img,
 .social-media-marketing img
@@ -173,8 +138,6 @@ p {
     max-height: 200px;
 }
 
-/*Grouped css classes together in one*/
-
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2
@@ -182,6 +145,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/*Grouped css classes together in one*/
 
 .footer {
     padding: 30px;
